--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
         with:
           java-version: 1.8
       - name: Build
-        run: mvn -DskipTests package --file pom.xml
+        run: mvn -DskipTests package --file pom.xml && find . -name '*.aar'
 
   Test:
     runs-on: ubuntu-latest
